# Copyright (C) 2014 Tai Chi Minh Ralph Eastwood.
# Redistribution and use of this file is allowed according to the terms of the MIT license.
# For details see the COPYRIGHT file distributed with Flymir LuaDist.
# Please note that the package source code is licensed under its own license.

project(coin-all C CXX)

cmake_minimum_required(VERSION 2.8)
include(cmake/dist.cmake)
include(cmake/coin.cmake)

include_directories(CoinUtils/src)
include_directories(Osi/src)
include_directories(Osi/src/Osi)
include_directories(Osi/src/OsiCommonTest)
include_directories(Vol/src)
include_directories(Vol/src/OsiVol)
include_directories(Clp/src)
include_directories(Clp/src/OsiClp)
include_directories(Cgl/src)
include_directories(Cgl/src/CglProbing)
include_directories(Cgl/src/CglPreProcess)
include_directories(Cgl/src/CglGomory)
include_directories(Cgl/src/CglTwomir)
include_directories(Cgl/src/CglDuplicateRow)
include_directories(Cgl/src/CglClique)
include_directories(Cgl/src/CglAllDifferent)
include_directories(Cgl/src/CglFlowCover)
include_directories(Cgl/src/CglKnapsackCover)
include_directories(Cgl/src/CglLiftAndProject)
include_directories(Cgl/src/CglMixedIntegerRounding)
include_directories(Cgl/src/CglMixedIntegerRounding2)
include_directories(Cgl/src/CglOddHole)
include_directories(Cgl/src/CglRedSplit)
include_directories(Cgl/src/CglResidualCapacity)
include_directories(Cgl/src/CglSimpleRounding)
include_directories(Cgl/src/CglLandP)
include_directories(Cbc/src)
add_subdirectory(CoinUtils)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/CoinUtils/src)
set(COIN_HAS_COINUTILS 1)
add_subdirectory(Osi)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Osi/src)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Osi/src/Osi)
set(COIN_HAS_OSI 1)
add_subdirectory(Vol)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Vol/src)
set(COIN_HAS_VOL 1)
set(COIN_HAS_OSIVOL 1)
add_subdirectory(Clp)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Clp/src)
set(COIN_HAS_CLP 1)
set(COIN_HAS_OSICLP 1)
add_subdirectory(Cgl)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Cgl/src)
set(COIN_HAS_CBC 1)
set(COIN_HAS_OSICBC 1)
add_subdirectory(Cbc)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Cbc/src)
