set(COINUTILS_VERSION_MAJOR 2 CACHE INTEGER "CoinUtils version major")
set(COINUTILS_VERSION_MINOR 8 CACHE INTEGER "CoinUtils version minor")
set(COINUTILS_VERSION_RELEASE 5 CACHE INTEGER "CoinUtils version revision")
set(COINUTILS_VERSION "${COINUTILS_VERSION_MAJOR}.${COINUTILS_VERSION_MINOR}.${COINUTILS_VERSION_RELEASE}")
set(COIN_COINUTILS_CHECKLEVEL 0 CACHE INTEGER "CoinUtils check level")
set(COIN_COINUTILS_VERBOSITY 0 CACHE INTEGER "CoinUtils verbosity")

add_subdirectory(src)
